
[package]
name = "m2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#indicatif = "0.17.8"
#tokio = { version = "1.37.0", features = ["full"]}
#libp2p = {version = "0.53.2", features = ["full"]}
#tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
#futures = "0.3.21"
#async-std = { version = "1.12.0", features = ["attributes"] }
#serde = {version = "1.0.197", features = ["serde_derive"]}
#serde_json = "1.0.115"
#reqwest = {version = "0.12.2", features = ["json"]}
actix-web = "4.5.1"
rand = "0.8.5"
actix-files = "0.6.5"
