
[package]
name = "fshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
rand = "0.8.5"
actix-files = "0.6.5"
qrcode = "0.14.0"
local-ip-address = "0.6.1"
fs2 = "0.4.3"
tokio = {version = "1.37.0", features = ["full"]}
actix-multipart = "0.6.1"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = {version = "4.5.4",features = ["derive"]}
